# legal-rag-hy

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE.org  CONFERENCE-README.md  CONFERENCE.md  CONTRIBUTING.md  CONTRIBUTING.org  DEVELOPERS.org  LICENSE  Makefile  PROJECT_STATUS.md  README-CLAUDE.org  README.org  demo-simple.hy  demo.hy  pyproject.toml  requirements-minimal.txt  run-from-usb.sh
.claude/: settings.json
.claude/commands/: code-review.md  doc-alignment.md  lint.md
.github/: CODEOWNERS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  architecture.org  deployment.org  evaluation.org  installation.org  jurisdiction.md  jurisdiction.org  usage.org
docs/DEVELOPERS/: org-mode-guide.org
docs/citation/: citation.bib
docs/status/: 2025-03-23-claude-claude-3-7-sonnet-20250219.org  2025-03-23-final-status.org  2025-03-23-project-status.org  2025-04-04-claude-claude-3-7-sonnet-20250219.md
examples/: round_trip_example.org
scripts/: git-commit-with-trailers.sh  setup-conference-demo.sh  update-hy-1.0.sh
src/: legal_rag.org
src/legal_rag/: __init__.hy  cache.hy  citation.hy  demo.hy  evaluation.hy  jurisdiction.hy  system.hy  utils.hy
tests/: test_hy10.hy  test_placeholder.py  test_simple.hy  test_system.hy
tests/legal_rag/: test_citation.py
